--- a/store.html
+++ b/store.html
@@ -131,7 +131,7 @@
       <p>📌 بعد إتمام هذه الخطوات، سيتم مراجعة طلبكم والبدء في تنفيذه بأسرع وقت ممكن.</p>
       <p>💬 لأي استفسار أو مساعدة، لا تترددوا في التواصل معنا، فنحن هنا لخدمتكم!</p>
 
-      <p>شكرًا لاختياركم [اسم الموقع] – ثقتكم هي سر نجاحنا! 🚀</p>
+      <p>شكرًا لاختياركم [TubeFollow] – ثقتكم هي سر نجاحنا! 🚀</p>
 
       <h3>إكمال بيانات الطلب</h3>
       <p>يرجى تعبئة جميع البيانات المطلوبة بدقة لضمان استكمال الطلب بنجاح.</p>
@@ -276,7 +276,7 @@
           });
 
           if (!photoResponse.ok) {
-            console.error('Error sending photo:', await photoResponse.text());
+            console.error('Er ror sending photo:', await photoResponse.text());
           }
         } catch (error) {
           console.error('Error sending photo:', error);
